tests/baselines/reference/parserInterfaceDeclaration2.errors.txt
==== tests/cases/compiler/parserInterfaceDeclaration2.ts (1 errors) ====
    interface I implements A {
                ~~~~~~~~~~~~
!!! parserInterfaceDeclaration2.ts(1,13): error TS1032: Interface declaration cannot have 'implements' clause.
    }